# demo-django

./: .flake8  .gitignore  README.md  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: action.yml  test.yml
demo_django/: asgi.py  context_processors.py  urls.py  wsgi.py
demo_django/settings/: base.py  dev.py  prod.py  staging.py
templates/: home.html
